# tin3_bot

./: .gitignore  CMakeLists.txt  README.md  package.xml
.devcontainer/: DOCKER_README.md  Dockerfile  devcontainer.json
launch/: multi_robot.launch.py  sim.launch.py  spawn_robot.launch.py  tin3_gz.launch.py  view_robot.launch.py
meshes/: camera.dae  camera_holder.dae  gimbal_base.dae  gimbal_pan.dae  gimbal_tilt.dae  left_track.dae  lidar.dae  right_track.dae
tin3_description/: CMakeLists.txt  README.md  package.xml
tin3_description/launch/: view_robot.launch.py
tin3_description/meshes/: gimbal_pan.dae  lidar.dae  rifle.dae  right_track.dae
tin3_description/rviz/: view_robot.rviz
tin3_description/urdf/: camera.xacro  chassis.xacro  gazebo.xacro  gazebo_control.xacro  gimbal.xacro  rifle.xacro  robot.urdf.xacro  sensors.xacro
tin3_gz_simulation/: CMakeLists.txt  README.md  package.xml
tin3_gz_simulation/config/: ros_gz_bridge.yaml
tin3_gz_simulation/launch/: sim.launch.py  spawn_robot.launch.py
tin3_gz_simulation/scripts/: test_multi_robot.py
tin3_gz_worlds/: CMakeLists.txt  README.md  package.xml
tin3_gz_worlds/models/route_66/: model.config  model.sdf
tin3_gz_worlds/models/route_66/meshes/: route66_visual.mtl
tin3_gz_worlds/worlds/: empty_world.sdf  marsyard2020.sdf  orchard_world.sdf  route_66.sdf
tin3_navigation/: CMakeLists.txt  README.md  package.xml
tin3_navigation/config/: .gitkeep  ekf.yaml  nav2_params.yaml
tin3_navigation/launch/: ekf.launch.py  nav2.launch.py  nav2_test.launch.py
tin3_navigation/maps/: empty_world_map.yaml
tin3_navigation/rviz/: nav2_config.rviz
urdf/: camera.xacro  chassis.xacro  gazebo.xacro  gazebo_control.xacro  gimbal.xacro  macros.xacro  materials.xacro  rifle.xacro  robot.urdf.xacro  sensors.xacro
worlds/: empty_world.sdf  test_world.sdf
